# article-mcp

./: .env_example  .gitignore  .pre-commit-config.yaml  AGGRESSIVE_CLEANUP_SUMMARY.md  CHANGELOG.md  CLAUDE.md  FINAL_CLEANUP_REPORT.md  IFLOW.md  PROFILE  README.md  comprehensive_stdio_test.py  final_stdio_test.py  glama.json  main.py  mcp_config.json  mcp_config_examples.json  mypy.ini  precise_relation_test.py  pyproject.toml  pytest.ini  setup.py  simple_stdio_test.py  test_journal_quality_complete.py  test_journal_quality_simple.py  test_relation_fix.py  test_stdio_functionality.py  项目总结.md
.github/workflows/: ci.yml  fastmcp-compliance.yml  publish.yml
docs/: API_Integration_Fix_Report.md  Cherry_Studio_Configuration_Guide.md  Cherry_Studio_配置指南.md  DEPLOYMENT_GUIDE.md  Deployment_Guide.md  FIXES_SUMMARY.md  Feature_Usage_Guide.md  MCP_CONFIG_INTEGRATION.md  MCP_Configuration_Integration.md  PROJECT_STRUCTURE.md  README.md  README_OPTIMIZED.md  TESTING_INFRASTRUCTURE.md  TOOLS_REFERENCE.md  Testing_Guide.md  debug.md  get_article_details_guide.md  integration_analysis.md  next.md  pytest_testing_guide.md  search_tools_integration_analysis.md  优化总结.md  参考文献功能使用示例.md  发布部署指南.md  基于BioMCP优化总结.md  期刊质量评估功能使用指南.md  相似文章功能使用指南.md  魔搭MCP广场部署总结.md
json/: mcp_config.json  mcp_config_article_mcp.json  mcp_config_cherry_studio.json  mcp_config_examples.json  mcp_config_local.json  mcp_config_simple.json  mcp_config_sse.json  mcp_config_sse_client.json
scripts/: README.md  README_fastmcp_test.md  README_version_management.md  USAGE_GUIDE.md  automated_compliance_pipeline.py  enhanced_error_handling_report.txt  enhanced_error_handling_test.py  fastmcp_compliance_report.txt  quick_test.py  run_all_tests.py  sync_version.py  test_basic_functionality.py  test_cli_functions.py  test_fastmcp_compliance.py  test_integration.py  test_performance.py  test_pytest_suite.py  test_search_performance.py  test_service_modules.py  test_working_functions.py  work_test.py
src/: __init__.py  api_utils.py  arxiv_search.py  crossref_service.py  error_utils.py  europe_pmc.py  html_to_text.py  mcp_config.py  merged_results.py  openalex_service.py  pubmed_search.py  reference_service.py  similar_articles.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_relation_tools.py
tool_modules/: article_detail_tools.py  linus_style.py
(+104 files in other folders)
